--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,15 +4,22 @@ version = "0.1.0"
 description = "Learning FastAPI Project"
 authors = ["KKamji <xowl5460@naver.com>"]
 readme = "README.md"
+packages = [
+    { include = "app" }
+]
 
 [tool.poetry.dependencies]
 python = "^3.13"
 fastapi = "^0.115.4"
 uvicorn = "^0.32.0"
-httpie = "^3.2.3"
-requests = "2.31.0"
-httpx = "^0.27.2"
 
+
+[tool.poetry.group.dev.dependencies]
+requests = "2.31.0"
+pytest = "^8.3.3"
+httpie = "^3.2.4"
+httpx = "^0.27.2"
+mypy = "^1.13.0"
 
 [build-system]
 requires = ["poetry-core"]
