--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pytest = "^8.3.3"
 httpie = "^3.2.4"
 httpx = "^0.27.2"
 mypy = "^1.13.0"
+pytest-mock = "^3.14.0"
 
 [build-system]
 requires = ["poetry-core"]
